[gd_scene load_steps=2 format=3 uid="uid://voice_settings_panel"]

[ext_resource type="Script" path="res://scripts/voice_settings_panel.gd" id="1"]

[node name="VoiceSettingsPanel" type="Panel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -150.0
offset_right = 250.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "语音设置"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
text = "×"

[node name="Separator1" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="EnableContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="EnableLabel" type="Label" parent="MarginContainer/VBoxContainer/EnableContainer"]
layout_mode = 2
text = "启用语音合成"

[node name="EnableCheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/EnableContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="VolumeContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="VolumeLabel" type="Label" parent="MarginContainer/VBoxContainer/VolumeContainer"]
layout_mode = 2
text = "音量"

[node name="VolumeSlider" type="HSlider" parent="MarginContainer/VBoxContainer/VolumeContainer"]
layout_mode = 2
min_value = 0.0
max_value = 1.0
step = 0.01
value = 0.8

[node name="VolumeValueLabel" type="Label" parent="MarginContainer/VBoxContainer/VolumeContainer"]
layout_mode = 2
text = "80%"
horizontal_alignment = 1

[node name="Separator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = ""
horizontal_alignment = 1
